Aligned the squares so they are even and fixed margins

--- a/style.css
+++ b/style.css
@@ -83,17 +83,13 @@ main {
     justify-content:left;
 }
 
-
  #subbox2 {
-     /*Add flex grow once I put in the images and space them out*/
-    flex-grow: ;
-    padding-right: 20px;
-    /*text-align: center;*/
+    flex-grow: 4;
+    padding-left: 45px;
+    text-align: center;
 }
 
-
 #important {
-    flex-grow:;
     background-image: url("images/binary.jpg");
     background-size: 625px;
     color: white;
@@ -101,33 +97,15 @@ main {
     height: 75px;
     text-align: center;
     padding-top: 50px;
+    padding-left: 150px;
+    margin-left: 30px;
 }
-    
-    /* width: auto;
-    border: 5px solid rgb(97, 109, 97);
-    padding: 50px;
-    margin: 20px;
-    background-image: url("images/binary.jpg");
-    opacity: .7;
-    background-size: contain;
-    color: #ffffff;
-} */
-
-/* p.sample {
-    width: 300px;
-    /*border: 15px solid green;*/
-    /* padding: 50px;
-    margin: 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: grey; 
-} */
 
 #section2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 #two {
@@ -153,12 +131,12 @@ main {
 #four {
     background-image: url("images/csscode.jpg");
     background-size: 101%;
-    font-size: 125%;
+    font-size: 150%;
     color: #ffffff;
     width: 500px;
     height: 150px;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 100px;
 }
 #five {
     background-image: url("images/code.jpg");
